--- a/index.html
+++ b/index.html
@@ -2,11 +2,225 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <meta name="keywords" content="перфоратор, шуруповерт, молоток">
+    <meta name="description" content="Интернет-магазин строительных материалов и инструментов для ремонта">
+    <title>Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
-
+    <div class="header">
+      <div class="top-menu">
+        <!-- div class="center" – блок-центровщик контента  -->
+        <div class="center">
+          <div class="header-logo">Техномарт</div>
+          <form class="search-form" action="#" method="get">
+            <input class="search-input" type="text" name="search" id="search" placeholder="Поиск">
+          </form>
+          <a class="top-menu-bookmarks" href="#">Закладки</a>
+          <a class="top-menu-basket" href="#">Корзина</a>
+          <a class="top-menu-order" href="#">Оформить заказ</a>
+        </div>
+      </div>
+      <div class="menu">
+        <div class="center">
+          <p class="site-description">Интернет магазин строительных материалов и инструментов для ремонта</p>
+          <div class="header-contacts">
+            <div class="header-phone">+7 (812) 555-05-55)</div>
+            <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </div>
+          <div class="user-block">
+            <a class="login" href="#"></a>
+            <a class="register" href="#"></a>
+          </div>
+          <ul class="header-navigation">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="index-content">
+      <div class="center">
+        <div class="index-offers">
+          <div class="index-offer offer-1"></div>
+          <div class="index-offer offer-2"></div>
+          <div class="index-offer offer-3"></div>
+          <div class="index-offer offer-4"></div>
+          <div class="index-offer offer-5"></div>
+          <div class="slider">
+            <div class="slider-header">
+              <h2 class="slider-header-title">Перфораторы</h2>
+              <p class="slider-title-slogan">Настоящие мужские игрушки</p>
+            </div>
+          </div>
+        </div>
+        <div class="index-popular-section">
+          <div class="index-popular-header">
+            <h2 class="index-popular-title">Популярные товары:</h2>
+            <a class="btn content-btn" href="#">Все популярные товары</a>
+          </div>
+          <ul class="index-popular-items">
+            <li>
+              <img src="http://placehold.it/220x170" alt="Placeholder" width="220" height="170">
+              <!-- Андрей подскажи! Я не уверен что выбрал здесь правильные элементы.-->
+              <h2 class="item-title">Перфоратор BOSH</h2>
+              <b class="item-model">BFG 9000</b>
+              <b class="item-old-price">32500</b>
+              <div class="item-price">25500</div>
+            </li>
+            <li>
+              <img src="http://placehold.it/220x170" alt="Placeholder" width="220" height="170">
+              <h2 class="item-title">Перфоратор BOSH</h2>
+              <b class="item-model">BFG 6000</b>
+              <b class="item-old-price">30500</b>
+              <div class="item-price"></div>
+            </li>
+            <li>
+              <img src="http://placehold.it/220x170" alt="Placeholder" width="220" height="170">
+              <h2 class="item-title">Перфоратор BOSH</h2>
+              <b class="item-model">BFG 3000</b>
+              <b class="item-old-price">22500</b>
+              <div class="item-price"></div>
+            </li>
+            <li>
+              <img src="http://placehold.it/220x170" alt="Placeholder" width="220" height="170">
+              <h2 class="item-title">Перфоратор BOSH</h2>
+              <b class="item-model">BFG 2000</b>
+              <b class="item-old-price">15500</b>
+              <div class="item-price"></div>
+            </li>
+          </ul>
+        </div>
+        <div class="index-popular-section">
+          <div class="index-popular-header">
+            <h2 class="index-popular-title">Популярные производители:</h2>
+            <a class="btn content-btn">Все производители</a>
+          </div>
+          <ul class="index-popular-brands">
+            <li>
+              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+            </li>
+            <li>
+              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+            </li>
+            <li>
+              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+            </li>
+            <li>
+              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+            </li>
+            <li>
+              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+            </li>
+            <li>
+              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+            </li>
+            <li>
+              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+            </li>
+            <li>
+              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="services">
+      <div class="center">
+        <h2 class="services-title">Сервисы</h2>
+        <p class="services-description">Хороший интернет-магазин отличается от плохого не только ценами!
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+        </p>
+        <ul class="services-menu">
+          <li>Доставка</li>
+          <li>Гарантия</li>
+          <li>Кредит</li>
+        </ul>
+        <div class="services-item">
+          <div class="services-item-title">Доставка</div>
+          <p class="services-item-description">Мы с удовольствием доставим ваш товар прямо
+            к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш на этаж!
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="information">
+      <div class="center">
+        <div class="information-section-left">
+          <h2 class="information-section-title">Компания &laquo;Техномарт&raquo;</h2>
+          <p class="information-section-description">Настоящий мужской шоппинг начинается здесь!
+             Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей
+             сэкномить на гастарбайтерах.
+          </p>
+          <ul class="information-features">
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a class="btn service-btn" href="#">Подробнее о компании</a>
+        </div>
+        <div class="information-section-right">
+          <h2 class="information-section-title">Контакты</h2>
+          <p class="information-section-description">Вы можете забрать товар сами, заехав к нам в офис</p>
+          <div class="information-section-map">
+            <img src="http://placehold.it/300x160" alt="Placeholder" width="300" height="160">
+          </div>
+          <a class="btn service-btn" href="#">Заблудились? Напишите нам!</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="center">
+      <!-- Вот здесь мне не понятно – нужно ли логотип и адрес под ним в отдельный блок?
+        Сверстаю по своему, а ты потом пожалуйста подскажи -->
+        <div class="footer-left-section">
+          <div class="footer-logo">Техномарт</div>
+          <p class="footer-adress">
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            +7 (812) 555-05-55
+          </p>
+        </div>
+        <div class="footer-right-section">
+          <ul class="footer-navigation">
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <ul class="footer-menu">
+            <li><a href="#">Материалы</a></li>
+            <li><a href="#">Техника</a></li>
+            <li><a href="#">Инструмент</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="bottom-menu">
+        <div class="center">
+          <div class="copyright">
+            &copy; 2010–2016 Компания &laquo;Техномарт&raquo;<br>
+            Все права защищены
+          </div>
+          <div class="footer-social">
+            <a class="social-btn social-btn-vk" href="#">VK</a>
+            <a class="social-btn social-btn-vk" href="#">FaceBook</a>
+            <a class="social-btn social-btn-vk" href="#">Instagram</a>
+          </div>
+          <div class="footer-feedback">
+            <p>Обратная связь</p>
+            <a class="feedback" href="#">mail@htmlacademy.ru</a>
+          </div>
+          <div class="footer-feedback">
+            <p>Разработано</p>
+            <a class="feedback" href="#">htmlacademy.ru</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
