--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="перфоратор, шуруповерт, молоток">
     <meta name="description" content="Интернет-магазин строительных материалов и инструментов для ремонта">
     <title>Техномарт</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="header">
@@ -46,15 +47,32 @@
     <div class="index-content">
       <div class="center">
         <div class="index-offers">
-          <div class="index-offer offer-1"></div>
-          <div class="index-offer offer-2"></div>
-          <div class="index-offer offer-3"></div>
-          <div class="index-offer offer-4"></div>
-          <div class="index-offer offer-5"></div>
+          <div class="index-offer offer-1">
+            <h2 class="index-offer-header">Материалы</h2>
+            <a class="index-offer-more" href="#">На любой вкус</a>
+          </div>
+          <div class="index-offer offer-2">
+            <h2 class="index-offer-header">Инструмент</h2>
+            <a class="index-offer-more" href="#">На все случаи</a>
+          </div>
+          <div class="index-offer offer-3">
+            <h2 class="index-offer-header">Техника</h2>
+            <a class="index-offer-more" href="#">Для стройки</a>
+          </div>
+          <div class="index-offer offer-4">
+            <h2 class="index-offer-header">Скидки 50%</h2>
+            <a class="index-offer-more" href="#">На 350 товаров</a>
+          </div>
+          <div class="index-offer offer-5">
+            <h2 class="index-offer-header">Доставка</h2>
+            <a class="index-offer-more" href="#">Бесплатно</a>
+          </div>
           <div class="slider">
+          <!-- Управляющие элементы я потом добавлю – я еще не знаю как их верстать -->
             <div class="slider-header">
               <h2 class="slider-header-title">Перфораторы</h2>
               <p class="slider-title-slogan">Настоящие мужские игрушки</p>
+              <img src="img/slider_image_1.jpg" height="266" width="620" alt="Перфораторы">
             </div>
           </div>
         </div>
@@ -65,32 +83,40 @@
           </div>
           <ul class="index-popular-items">
             <li>
-              <img src="http://placehold.it/220x170" alt="Placeholder" width="220" height="170">
+              <img src="img/bfg9000_small.jpg" width="184" height="164" alt="BFG9000">
               <!-- Андрей подскажи! Я не уверен что выбрал здесь правильные элементы.-->
-              <h2 class="item-title">Перфоратор BOSH</h2>
-              <b class="item-model">BFG 9000</b>
-              <b class="item-old-price">32500</b>
+              <a class="item-title">
+                <span class="item-name">Перфоратор BOSH</span>
+                <span class="item-model">BFG 9000</span>
+              </a>
+              <span class="item-old-price">32500</span>
               <div class="item-price">25500</div>
             </li>
             <li>
-              <img src="http://placehold.it/220x170" alt="Placeholder" width="220" height="170">
-              <h2 class="item-title">Перфоратор BOSH</h2>
-              <b class="item-model">BFG 6000</b>
-              <b class="item-old-price">30500</b>
+              <img src="img/bfg6000_small.jpg" height="128" width="144" alt="BFG3000">
+              <a class="item-title">
+                <span class="item-name">Перфоратор BOSH</span>
+                <span class="item-model">BFG 6000</span>
+              </a>
+              <span class="item-old-price">30500</span>
               <div class="item-price"></div>
             </li>
             <li>
-              <img src="http://placehold.it/220x170" alt="Placeholder" width="220" height="170">
-              <h2 class="item-title">Перфоратор BOSH</h2>
-              <b class="item-model">BFG 3000</b>
-              <b class="item-old-price">22500</b>
+              <img src="img/bfg3000_small.jpg" height="112" width="127" alt="BFG3000">
+              <a class="item-title">
+                <span class="item-name">Перфоратор BOSH</span>
+                <span class="item-model">BFG 3000</span>
+              </a>
+              <span class="item-old-price">22500</span>
               <div class="item-price"></div>
             </li>
             <li>
-              <img src="http://placehold.it/220x170" alt="Placeholder" width="220" height="170">
-              <h2 class="item-title">Перфоратор BOSH</h2>
-              <b class="item-model">BFG 2000</b>
-              <b class="item-old-price">15500</b>
+              <img src="img/bfg2000_small.jpg" height="112" width="127" alt="BFG2000">
+              <a class="item-title">
+                <span class="item-name">Перфоратор BOSH</span>
+                <span class="item-model">BFG 2000</span>
+              </a>
+              <span class="item-old-price">15500</span>
               <div class="item-price"></div>
             </li>
           </ul>
@@ -102,28 +128,28 @@
           </div>
           <ul class="index-popular-brands">
             <li>
-              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+              <a href="#"><img src="img/brand_bosch.jpg" height="37" width="126" alt="Bosh"></a>
             </li>
             <li>
-              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+              <a href="#"><img src="img/brand_makita.jpg" height="40" width="123" alt="Makita"></a>
             </li>
             <li>
-              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+              <a href="#"><img src="img/brand_dewalt.jpg" height="44" width="146" alt="DeWalt"></a>
             </li>
             <li>
-              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+              <a href="#"><img src="img/brand_interskol.jpg" height="88" width="200" alt="Интерскол"></a>
             </li>
             <li>
-              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+              <a href="#"><img src="img/brand_hitachi.jpg" height="31" width="169" alt="Hitachi"></a>
             </li>
             <li>
-              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+              <a href="#"><img src="img/brand_lg.jpg" height="73" width="121" alt="LG"></a>
             </li>
             <li>
-              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+              <a href="#"><img src="img/brand_aeg.jpg" height="96" width="151" alt="AEG"></a>
             </li>
             <li>
-              <a href="#"><img src="http://placehold.it/220x145" alt="Placeholder" width="220" height="145"></a>
+              <a href="#"><img src="img/brand_metabo.jpg" height="69" width="204" alt="Metabo"></a>
             </li>
           </ul>
         </div>
@@ -167,7 +193,7 @@
           <h2 class="information-section-title">Контакты</h2>
           <p class="information-section-description">Вы можете забрать товар сами, заехав к нам в офис</p>
           <div class="information-section-map">
-            <img src="http://placehold.it/300x160" alt="Placeholder" width="300" height="160">
+            <img src="img/information_map_mini.png" height="158" width="300" alt="map">
           </div>
           <a class="btn service-btn" href="#">Заблудились? Напишите нам!</a>
         </div>
