--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <div class="center">
           <div class="header-logo">Техномарт</div>
           <form class="search-form" action="#" method="get">
-            <input class="search-input" type="text" name="search" id="search" placeholder="Поиск">
-          </form>
-          <a class="top-menu-bookmarks" href="#">Закладки</a>
-          <a class="top-menu-basket" href="#">Корзина</a>
+          <!-- Добавил кнопку для поиска -->
+          <!-- Добавил span-ы к корзине и закладкам -->
+            <button class="search-button" type="submit">Иконка</button>
+            <input class="search-input" type="search" value="" name="search-request" id="search" placeholder="Поиск">
+          </form>          
+          <a class="top-menu-bookmarks" href="#">Закладки: <span class="bookmarks-count">0</span></a>
+          <a class="top-menu-cart" href="#">Корзина: <span class="cart-items-count">0</span></a>
           <a class="top-menu-order" href="#">Оформить заказ</a>
         </div>
       </div>
@@ -46,33 +49,64 @@
     </div>
     <div class="index-content">
       <div class="center">
+      <!-- По твоей рекомендации исправил имена классов 
+           и разбил их по отдельным колонкам, 
+           добавил блоки с фоновой картинкой,
+           ТОЛЬКО теперь мне кажется, что получилась большая вложенность
+           и код плохо читается. Или нормально?  -->
         <div class="index-offers">
-          <div class="index-offer offer-1">
-            <h2 class="index-offer-header">Материалы</h2>
-            <a class="index-offer-more" href="#">На любой вкус</a>
+          <div class="index-offers-layout">
+            <div class="index-offer offer-materials">
+              <h2 class="index-offer-header">Материалы</h2>
+              <a class="index-offer-more" href="#">На любой вкус</a> 
+              <div class="img-offer-tools">
+                <img src="img/offers_bucket.png.png" height="61" width="75" alt="">
+              </div>             
+              <div class="new-tag">
+                <img src="img/tag_new.png" height="59" width="60" alt="Новое">
+              </div>
+            </div>
+            <div class="index-offer offer-tools">
+              <h2 class="index-offer-header">Инструмент</h2>
+              <a class="index-offer-more" href="#">На все случаи</a>
+              <div class="img-offer-tools">
+                <img src="img/offers_drill.png" height="61" width="75" alt="">
+              </div>
+            </div>            
+            <div class="slider">            
+              <div class="slider-header">
+                <h2 class="slider-header-title">Перфораторы</h2>
+                <h2 class="slider-header-title hidden">Дрели</h2>
+                <p class="slider-title-slogan">Настоящие мужские игрушки</p>
+                <p class="slider-title-slogan hidden">Соседям на радость</p>
+              </div>
+              <div class="slides">
+                <img src="img/slider_image_1.jpg" height="266" width="620" alt="Перфораторы">
+                <img src="img/slider_image_2.jpg" height="266" width="620" alt="Дрели">
+              </div>             
+            </div>
           </div>
-          <div class="index-offer offer-2">
-            <h2 class="index-offer-header">Инструмент</h2>
-            <a class="index-offer-more" href="#">На все случаи</a>
-          </div>
-          <div class="index-offer offer-3">
-            <h2 class="index-offer-header">Техника</h2>
-            <a class="index-offer-more" href="#">Для стройки</a>
-          </div>
-          <div class="index-offer offer-4">
-            <h2 class="index-offer-header">Скидки 50%</h2>
-            <a class="index-offer-more" href="#">На 350 товаров</a>
-          </div>
-          <div class="index-offer offer-5">
-            <h2 class="index-offer-header">Доставка</h2>
-            <a class="index-offer-more" href="#">Бесплатно</a>
-          </div>
-          <div class="slider">
-          <!-- Управляющие элементы я потом добавлю – я еще не знаю как их верстать -->
-            <div class="slider-header">
-              <h2 class="slider-header-title">Перфораторы</h2>
-              <p class="slider-title-slogan">Настоящие мужские игрушки</p>
-              <img src="img/slider_image_1.jpg" height="266" width="620" alt="Перфораторы">
+          <div class="index-offers-layout">
+            <div class="index-offer offer-technics">
+              <h2 class="index-offer-header">Техника</h2>
+              <a class="index-offer-more" href="#">Для стройки</a>
+              <div class="img-offer-technics">
+                <img src="img/offers_tractor.png.png" height="61" width="75" alt="Техника">
+              </div>
+            </div>
+            <div class="index-offer offer-discounts">
+              <h2 class="index-offer-header">Скидки 50%</h2>
+              <a class="index-offer-more" href="#">На 350 товаров</a>
+              <div class="img-offer-discounts">
+                <img src="img/offers_cart.png.png" height="61" width="75" alt="Скидки">
+              </div>
+            </div>
+            <div class="index-offer offer-delivery">
+              <h2 class="index-offer-header">Доставка</h2>
+              <a class="index-offer-more" href="#">Бесплатно</a>
+              <div class="img-offer-delivery">
+                <img src="img/offers_bus.png.png" height="61" width="75" alt="Доставка">
+              </div>
             </div>
           </div>
         </div>
@@ -83,41 +117,60 @@
           </div>
           <ul class="index-popular-items">
             <li>
-              <img src="img/bfg9000_small.jpg" width="184" height="164" alt="BFG9000">
-              <!-- Андрей подскажи! Я не уверен что выбрал здесь правильные элементы.-->
-              <a class="item-title">
-                <span class="item-name">Перфоратор BOSH</span>
-                <span class="item-model">BFG 9000</span>
-              </a>
-              <span class="item-old-price">32500</span>
+              <div class="item-image">                
+                <img src="img/bfg9000_small.jpg" width="184" height="164" alt="BFG9000">
+              </div>
+              <div class="item-name">Перфоратор BOSH</div>
+              <div class="item-model">BFG 9000</div>              
+              <div class="item-old-price">32500</div>
               <div class="item-price">25500</div>
+              <!-- Всплывающий блок с ценой и "в акладки" -->
+              <div class="item-hover">
+                <a class="item-hover-buy" href="#">Купить</a>
+                <a class="item-hover-bookmarks" href="#">В закладки</a>
+              </div>
             </li>
             <li>
-              <img src="img/bfg6000_small.jpg" height="128" width="144" alt="BFG3000">
-              <a class="item-title">
-                <span class="item-name">Перфоратор BOSH</span>
-                <span class="item-model">BFG 6000</span>
-              </a>
-              <span class="item-old-price">30500</span>
-              <div class="item-price"></div>
+              <div class="item-image">
+                <img src="img/bfg6000_small.jpg" height="128" width="144" alt="BFG3000">
+              </div>             
+              <div class="item-name">Перфоратор BOSH</div>
+              <div class="item-model">BFG 6000</div>              
+              <div class="item-old-price">30500</div>
+              <div class="item-price">25500</div>
+              <div class="item-hover">
+                <a class="item-hover-buy" href="#">Купить</a>
+                <a class="item-hover-bookmarks" href="#">В закладки</a>
+              </div>
             </li>
             <li>
-              <img src="img/bfg3000_small.jpg" height="112" width="127" alt="BFG3000">
-              <a class="item-title">
-                <span class="item-name">Перфоратор BOSH</span>
-                <span class="item-model">BFG 3000</span>
-              </a>
-              <span class="item-old-price">22500</span>
-              <div class="item-price"></div>
+              <div class="item-image">
+                <img src="img/bfg3000_small.jpg" height="112" width="127" alt="BFG3000">
+              </div>             
+              <div class="item-name">Перфоратор BOSH</div>
+              <div class="item-model">BFG 3000</div>              
+              <div class="item-old-price">22500</div>
+              <div class="item-price">15500</div>
+              <div class="item-hover">
+                <a class="item-hover-buy" href="#">Купить</a>
+                <a class="item-hover-bookmarks" href="#">В закладки</a>
+              </div>
             </li>
             <li>
-              <img src="img/bfg2000_small.jpg" height="112" width="127" alt="BFG2000">
-              <a class="item-title">
-                <span class="item-name">Перфоратор BOSH</span>
-                <span class="item-model">BFG 2000</span>
-              </a>
-              <span class="item-old-price">15500</span>
-              <div class="item-price"></div>
+              <div class="item-image">                
+                <img src="img/bfg2000_small.jpg" height="112" width="127" alt="BFG2000">
+              </div>
+              <div class="new-tag">
+                <img src="img/tag_new.png" height="59" width="60" alt="Новое">
+              </div>
+              <div class="item-name">Перфоратор BOSH</div>
+              <div class="item-model">BFG 2000</div>              
+              <div class="item-old-price hollow">15500</div>
+              <div class="item-price"></div>              
+              <div class="item-hover">
+                <a class="item-hover-buy" href="#">Купить</a>
+                <a class="item-hover-bookmarks" href="#">В закладки</a>
+              </div>
             </li>
           </ul>
         </div>
@@ -126,31 +179,16 @@
             <h2 class="index-popular-title">Популярные производители:</h2>
             <a class="btn content-btn">Все производители</a>
           </div>
+          <!-- Убрал ссылки. В спецификации о них ничего не сказано -->
           <ul class="index-popular-brands">
-            <li>
-              <a href="#"><img src="img/brand_bosch.jpg" height="37" width="126" alt="Bosh"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/brand_makita.jpg" height="40" width="123" alt="Makita"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/brand_dewalt.jpg" height="44" width="146" alt="DeWalt"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/brand_interskol.jpg" height="88" width="200" alt="Интерскол"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/brand_hitachi.jpg" height="31" width="169" alt="Hitachi"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/brand_lg.jpg" height="73" width="121" alt="LG"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/brand_aeg.jpg" height="96" width="151" alt="AEG"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/brand_metabo.jpg" height="69" width="204" alt="Metabo"></a>
-            </li>
+            <li><img src="img/brand_bosch.jpg" height="37" width="126" alt="Bosh"></li>
+            <li><img src="img/brand_makita.jpg" height="40" width="123" alt="Makita"></li>
+            <li><img src="img/brand_dewalt.jpg" height="44" width="146" alt="DeWalt"></li>
+            <li><img src="img/brand_interskol.jpg" height="88" width="200" alt="Интерскол"></li>
+            <li><img src="img/brand_hitachi.jpg" height="31" width="169" alt="Hitachi"></li>
+            <li><img src="img/brand_lg.jpg" height="73" width="121" alt="LG"></li>
+            <li><img src="img/brand_aeg.jpg" height="96" width="151" alt="AEG"></li>
+            <li><img src="img/brand_metabo.jpg" height="69" width="204" alt="Metabo"></li>
           </ul>
         </div>
       </div>
@@ -162,15 +200,27 @@
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
         </p>
         <ul class="services-menu">
-          <li>Доставка</li>
-          <li>Гарантия</li>
-          <li>Кредит</li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Кредит</a></li>
         </ul>
         <div class="services-item">
-          <div class="services-item-title">Доставка</div>
+          <h2 class="services-item-title">Доставка</h2>
           <p class="services-item-description">Мы с удовольствием доставим ваш товар прямо
             к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш на этаж!
           </p>
+        </div>
+        <div class="services-item">
+          <h2 class="services-item-title">Гарантия</h2>
+          <p class="services-item-description" >Если купленный у нас товар поломается или заискрит, 
+          а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии.Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
+          </p>
+        </div>
+        <div class="services-item">
+          <h2 class="services-item-title">Кредит</h2>
+          <p class="services-item-description">Залезть в долговую яму стало проще!Кредитные консультанты придут вам на помощь.
+          </p>
+          <a  class="btn content-btn" href="#">Отправить заявку</a>
         </div>
       </div>
     </div>
@@ -192,17 +242,39 @@
         <div class="information-section-right">
           <h2 class="information-section-title">Контакты</h2>
           <p class="information-section-description">Вы можете забрать товар сами, заехав к нам в офис</p>
-          <div class="information-section-map">
-            <img src="img/information_map_mini.png" height="158" width="300" alt="map">
+          <div class="information-section-map-">
+          <!-- Не знаю как здесь правильно сделать. 
+             Заворачивать картунку карты в отдельный блок, или так оставить? -->
+          <div class="close-button"><img src="img/close-button.png" width="21"  height="21" alt="закрыть"></div>
+            <img src="img/information_map_mini.png" height="158" width="300" alt="карта">
+          </div>                       
+          <div class="information-section-map-big">
+            <img src="img/information_map_big.jpg" width="940" height="446" alt="Большая карта">
           </div>
-          <a class="btn service-btn" href="#">Заблудились? Напишите нам!</a>
+          <a class="btn service-btn" href="#">Заблудились? Напишите нам!</a>          
+            <div class="write-us">
+              <div class="close-button"><img src="img/close-button.png" width="21"  height="21" alt="закрыть"></div>  
+              <form class="contact-form center" action="#" method="post" name="contact-form">
+                <div class="contact-form-layout clearfix">
+                  <div class="contact-form-name">
+                    <label for="contact-name">Ваше имя:</label>
+                    <input type="text" name="contact-form-name" id="contact-name">
+                  </div>
+                  <div class="contact-form-email">
+                    <label for="contact-email">Ваш E-Mail:</label>
+                    <input type="text" name="contact-form-email" id="contact-email">
+                  </div>
+                </div>
+                <label for="contact-text">Текст письма</label>
+                <textarea name="contact-form-text" id="contact-text" cols="30" rows="10">В свободной форме</textarea>
+                <button class="service-btn" type="submit">Отправить</button>
+              </form>
+            </div>
         </div>
       </div>
     </div>
     <div class="footer">
-      <div class="center">
-      <!-- Вот здесь мне не понятно – нужно ли логотип и адрес под ним в отдельный блок?
-        Сверстаю по своему, а ты потом пожалуйста подскажи -->
+      <div class="center">      
         <div class="footer-left-section">
           <div class="footer-logo">Техномарт</div>
           <p class="footer-adress">
