--- a/index.html
+++ b/index.html
@@ -334,5 +334,34 @@
       </div>
     </div>
   </div>
+  <!-- /////////////////////////////////////// -->
+  <!-- /////////////// Pop-ups ////////////////-->
+  <!-- /////////////////////////////////////// -->
+  <!-- write-us form  -->
+  <form class="write-us-form hidden" action="#" method="post">
+    <i class="close-button">Закрыть</i>
+    <div class="write-us-top-section clearfix">
+    <!-- write-us-left-section -->
+      <div class="write-us-section-left">
+        <label for="id-name">Ваше имя:</label>
+        <input type="text" name="name" id="id-name" placeholder="Представьтесь, пожалуйста">
+      </div>
+      <!-- write-us-right-section -->
+      <div class="write-us-section-right">
+        <label for="id-email">Ваш e-mail:</label>
+        <input type="text" name="email" id="id-email" placeholder="Для отправки ответа">
+      </div>
+      <label for="id-email">Текст письма:</label>
+      <textarea class="write-us-message" name="message" id="id-message" cols="30" rows="10">Текст письма</textarea>
+    </div>
+    <div class="write-us-bottom-section">
+      <button class="btn write-us-send-button" type="submit">Отправить</button>
+    </div>
+  </form>
+  <!--  big map  -->
+  <div class="big-map hidden">
+    <i class="close-button">Закрыть</i>
+    <img src="img/information_map_big.jpg" alt="Карта" width="940" height="446">
+  </div>
 </body>
 </html>
