--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
       <div class="offers-top-section clearfix">
         <!-- Offer -->
         <div class="offer offer-1 clearfix">
-          <div class="new-flag offer-new-flag"><img src="img/new-flag.png" alt="Новинка"></div>
+          <div class="new-flag offer-new-flag">Новинка</div>
           <div class="offer-section">
             <h2 class="offer-title">Материалы</h2>
             <a class="offer-link" href="#">На любой вкус</a>
           </div>
-          <div class="offer-image"><img src="img/offer-materials.png" alt="Материалы" width="140" height="123"></div>
+          <div class="offer-image"></div>
         </div>
         <!-- Offer -->
         <div class="offer offer-2 clearfix">
@@ -83,7 +83,7 @@
             <h2 class="offer-title">Инструмент</h2>
             <a class="offer-link" href="#">На все случаи</a>
           </div>
-          <div class="offer-image"><img src="img/offer-instrument.png" alt="Инструмент" width="140" height="123"></div>
+          <div class="offer-image"></div>
         </div>
         <!-- Offer -->
         <div class="offer offer-3 clearfix">
@@ -91,7 +91,7 @@
             <h2 class="offer-title">Техника</h2>
             <a class="offer-link" href="#">Для стройки</a>
           </div>
-          <div class="offer-image"><img src="img/offer-tech.png" alt="Техника" width="140" height="123"></div>
+          <div class="offer-image"></div>
         </div>
       </div>
       <!-- Offers-section -->
@@ -110,7 +110,7 @@
               <h2 class="offer-title">Скидки 50%</h2>
               <a class="offer-link" href="#">На 350 товаров</a>
             </div>
-            <div class="offer-image"><img src="img/offer-discount.png" alt="Скидки 50%" width="140" height="123"></div>
+            <div class="offer-image"></div>
           </div>
           <!-- Offer -->
           <div class="offer offer-5 clearfix">
@@ -118,7 +118,7 @@
               <h2 class="offer-title">Доставка</h2>
               <a class="offer-link" href="#">Бесплатно</a>
             </div>
-            <div class="offer-image offer-5-image"><img src="img/offer-delivery.png" alt="Доставка" width="140" height="123"></div>
+            <div class="offer-image"></div>
           </div>
         </div>
       </div>
@@ -186,7 +186,7 @@
               <span class="catalog-item-model">BFG 2000</span>
               <span class="catalog-item-discount">10500 Р.</span>
               <div class="catalog-item-price">12500 Р.</div>
-              <div class="new-flag catalog-new-flag"><img src="img/new-flag.png" alt="Новинка"></div>
+              <div class="new-flag catalog-new-flag">Новинка</div>
             </li>
           </ul>
         </div>
