--- a/index.html
+++ b/index.html
@@ -207,28 +207,28 @@
   <div class="services">
     <div class="container">
       <div class="services-header clearfix">
-        <h3>Сервисы</h3>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+        <h3 class="services-title">Сервисы</h3>
+        <p class="services-description">Хороший интернет-магазин отличается от плохого не только ценами!<br>
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
       <!-- Services-section -->
       <div class="services-section clearfix">
         <ul class="services-menu">
-          <li><a href="#" id="service-menu-item-1">Доставка</a></li>
-          <li><a href="#" id="service-menu-item-2">Гарантия</a></li>
-          <li><a href="#" id="service-menu-item-3">Кредит</a></li>
+          <li class="services-menu-item" id="service-menu-item-1">Доставка</li>
+          <li class="services-menu-item" id="service-menu-item-2">Гарантия</li>
+          <li class="services-menu-item" id="service-menu-item-3">Кредит</li>
         </ul>
-        <div class="service-info service-1-info">
-          <h2>Доставка</h2>
-          <p>Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно!<br>
+        <div class="service-info service-1-info hidden">
+          <h2 class="service-info-title">Доставка</h2>
+          <p class="service-info-description">Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно!<br>
           Ведь мы неплохо заработаем,<br> поднимая его на ваш на этаж!</p>
           <div class="service-image">
             <img src="img/service_car.png" alt="Доставка" width="468" height="261">
           </div>
         </div>
         <div class="service-info service-2-info hidden ">
-          <h2>Гарантия</h2>
-          <p>Если купленный у нас товар поломается или заискрит,<br>
+          <h2 class="service-info-title">Гарантия</h2>
+          <p class="service-info-description">Если купленный у нас товар поломается или заискрит,<br>
            а также в случае пожара, спровоцированного его возгаранием,<br>
            вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>
           сгоревший товар на новый.<br>
@@ -237,9 +237,9 @@
             <img src="img/service_guarantee.png" alt="Гарантия" width="389"  height="283">
           </div>
         </div>
-        <div class="service-info service-3-info hidden">
-          <h2>Кредит</h2>
-          <p>Залезть в долговую яму стало проще!<br>
+        <div class="service-info service-3-info">
+          <h2 class="service-info-title">Кредит</h2>
+          <p class="service-info-description">Залезть в долговую яму стало проще!<br>
           Кредитные консультанты придут вам на помощь.</p>
           <a class="btn service-info-btn" href="#">Отправить заявку</a>
           <div class="service-image">
@@ -254,11 +254,11 @@
     <div class="container">
       <!-- Information-section-left -->
       <div class="info-section-left clearfix">
-        <h3>Компания &laquo;Техномарт&raquo;</h3>
-        <p>Настоящий мужской шоппинг начинается здесь!
+        <h3 class="info-section-title">Компания &laquo;Техномарт&raquo;</h3>
+        <p class="info-section-description">Настоящий мужской шоппинг начинается здесь!
         Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей
         сэкномить на гастарбайтерах.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+        <p class="info-section-description">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
         Техномарт работает со многими транспортными компаниями:</p>
         <ul class="info-section-list">
           <li>Деловые линии</li>
@@ -269,8 +269,8 @@
       </div>
       <!-- Information-section-right -->
       <div class="info-section-right">
-        <h3>Контакты</h3>
-        <p>Вы можете забрать товар сами, <br>
+        <h3 class="info-section-title">Контакты</h3>
+        <p class="info-section-description">Вы можете забрать товар сами, <br>
         заехав в наш офис:</p>
         <div class="map-preview">
           <img src="img/map_preview.jpg" alt="Мини-карта" width="300" height="158">
@@ -280,8 +280,8 @@
     </div>
   </div>
   <!-- Footer -->
-  <div class="footer clearfix">
-    <div class="container">
+  <div class="footer">
+    <div class="container clearfix">
     <!-- Footer-section-left  -->
       <div class="footer-section-left">
         <div class="logo footer-logo">Техномарт</div>
@@ -317,8 +317,8 @@
         <a class="social-btn social-btn-instagram" href="#">Инстаграм</a>
       </div>
       <div class="bottom-contacts">
-        <p class="bottom-contacts-section">Обратная связь:<br><a href="#">@htmlacademy.ru</a></p>
-        <p class="bottom-contacts-section">Разработано: &#8211;<br><a href="#">htmlacademy.ru</a></p>
+        <p class="bottom-contacts-section call-back">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
+        <p class="bottom-contacts-section design-by">Разработано: &#8211;<br><a href="#">htmlacademy.ru</a></p>
       </div>
     </div>
   </div>
