Made styles for hover and active

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
       <!-- Services-section -->
       <div class="services-section clearfix">
         <ul class="services-menu">
-          <li class="services-menu-item" id="service-menu-item-1">Доставка</li>
+          <li class="services-menu-item active" id="service-menu-item-1">Доставка</li>
           <li class="services-menu-item" id="service-menu-item-2">Гарантия</li>
           <li class="services-menu-item" id="service-menu-item-3">Кредит</li>
         </ul>
-        <div class="service-info service-1-info hidden">
+        <div class="service-info service-1-info">
           <h2 class="service-info-title">Доставка</h2>
           <p class="service-info-description">Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно!<br>
           Ведь мы неплохо заработаем,<br> поднимая его на ваш на этаж!</p>
@@ -237,7 +237,7 @@
             <img src="img/service_guarantee.png" alt="Гарантия" width="389"  height="283">
           </div>
         </div>
-        <div class="service-info service-3-info">
+        <div class="service-info service-3-info hidden">
           <h2 class="service-info-title">Кредит</h2>
           <p class="service-info-description">Залезть в долговую яму стало проще!<br>
           Кредитные консультанты придут вам на помощь.</p>
